@@ -74,6 +74,7 @@ enum
   TOKEN_D_SLIDER,
   TOKEN_D_ENTRY,
   TOKEN_D_HANDLE,
+  TOKEN_D_STEPPER,
   TOKEN_TRUE,
   TOKEN_FALSE,
   TOKEN_TOP,
